{initial_commit_message}

--- a/package.json
+++ b/package.json
@@ -6,34 +6,35 @@
     "types": "dist/index.d.ts",
     "type": "module",
     "bin": {
-      "salesforce-connector": "dist/index.js"
+        "salesforce-connector": "dist/index.js"
     },
     "files": [
-      "dist"
+        "dist"
     ],
     "scripts": {
-      "build": "tsc && shx chmod +x dist/*.js",
-      "prepare": "npm run build",
-      "watch": "tsc --watch",
-      "test": "node --test"
+        "build": "tsc && shx chmod +x dist/*.js",
+        "prepare": "npm run build",
+        "watch": "tsc --watch",
+        "test": "node --test"
     },
     "keywords": [
-      "mcp",
-      "salesforce",
-      "claude",
-      "ai"
+        "mcp",
+        "salesforce",
+        "claude",
+        "ai"
     ],
     "author": "tsmztech",
     "license": "MIT",
     "dependencies": {
-      "@modelcontextprotocol/sdk": "0.5.0",
-      "dotenv": "^16.3.1",
-      "jsforce": "^1.11.0"
+        "@modelcontextprotocol/sdk": "0.5.0",
+        "dotenv": "^16.3.1",
+        "express": "^5.1.0",
+        "jsforce": "^1.11.0"
     },
     "devDependencies": {
-      "@types/node": "^22.10.1",
-      "typescript": "^5.7.2",
-      "shx": "^0.3.4"
+        "@types/express": "^5.0.3",
+        "@types/node": "^22.10.1",
+        "shx": "^0.3.4",
+        "typescript": "^5.7.2"
     }
-  }
-  
+}
